--- a/products.html
+++ b/products.html
@@ -22,71 +22,127 @@
         repeat card-holder elements as needed -->
       <!--</div> -->
 
-      <div class="container" style="margin-top:30px;">
+      <div class="container"">
         <h1 class="text-center">Our Cakes</h1>
       </div>
 
       <div class="container-fluid" style="margin-top:100px">
-        <div class="row">
-           <div class="col-md-3">
-             <div class="card">   <!--style="width: 15rem;" -->
+        <div class="row" style="margin-bottom:30px">
+           <div class="col-sm-3">    <!-- class="col-md-3" -->
+             <div class="card" style="height:100%">   <!--style="width: 15rem;" -->
                <img src="./product_img/cupcakes/c-feature-1.jpg" class="card-img-top"  alt="">
                <div class="card-body">
-                 <h5 class="card-title">Strawberry cupcake</h5>
-                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                 <h5 class="card-text">12 $</h5>
-                 <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-             </div>
-           </div>
-           <div class="col-md-3">
-            <div class="card">
-              <img src="./product_img/cupcakes/c-feature-2.jpg"" class="card-img-top" alt="">
-              <div class="card-body">
-                <h5 class="card-title">Kiwi cupcake</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <h5 class="card-text">12 $</h5>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-             </div>
-           </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <img src="./product_img/cupcakes/c-feature-3.jpg"" class="card-img-top" alt="">
-              <div class="card-body">
-                <h5 class="card-title">Vanilla chocolate cupcake</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <h5 class="card-text">10 $</h5>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-             </div>
-           </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <img src="./product_img/cupcakes/c-feature-4.jpg"" class="card-img-top"  alt="">
-              <div class="card-body">
-                <h5 class="card-title">Chocolate cupcake</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <h5 class="card-text">11 $</h5>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-             </div>
-           </div>
-          </div>
-
-            <div class="col-md-3">
-              <div class="card">   
-                <img src="./product_img/cupcakes/c-feature-1.jpg"" class="card-img-top"  alt="">
-                <div class="card-body">
-                  <h5 class="card-title">wedding cake</h5>
+                <!-- <div style="height:600px"> -->
+                  <h5 class="card-title">Strawberry cupcake</h5>
+                  <h5 style="font-size:12px">Cupcake</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <h5 class="card-text">12 $</h5>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
+                <!-- </div>               -->
+              </div>
+             </div>
+           </div>
+           <div class="col-sm-3">
+            <div class="card" style="height:100%">
+              <img src="./product_img/cupcakes/c-feature-2.jpg"" class="card-img-top" alt="">
+              <div class="card-body">
+                <!-- <div style="height:600px"> -->
+                   <h5 class="card-title">Kiwi supreme</h5>
+                   <h5 style="font-size:12px">Cupcake</h5>
+                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                   <h5 class="card-text">12 $</h5>
+                   <a href="#" class="btn btn-primary">Go somewhere</a>
+                <!-- </div> -->
+             </div>
+           </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card" style="height:100%">
+              <img src="./product_img/cupcakes/c-feature-3.jpg"" class="card-img-top" alt="">
+              <div class="card-body">
+                <!-- <div style="height:600px"> -->
+                   <h5 class="card-title">Vanilla chocolate dream</h5>
+                   <h5 style="font-size:12px">Cupcake</h5>
+                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                   <h5 class="card-text">10 $</h5>
+                   <a href="#" class="btn btn-primary">Go somewhere</a>
+                <!-- </div> -->
+             </div>
+           </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card" style="height:100%">
+              <img src="./product_img/cupcakes/c-feature-4.jpg"" class="card-img-top"  alt="">
+              <div class="card-body">
+                <!-- <div style="height:600px"> -->
+                  <h5 class="card-title">Chocolate cupcake</h5>
+                  <h5 style="font-size:12px">Cupcake</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-text">11 $</h5>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                <!-- </div> -->
+             </div>
+           </div>
+          </div>
+        </div>
+        <div class="row" style="margin-top:30px">
+            <div class="col-sm-3">
+              <div class="card" style="height:100%">   
+                <img src="./product_img/wedding_cakes/wedd_1.jpg"" class="card-img-top"  alt="">
+                <div class="card-body">
+                    <h5 class="card-title">Mango Dream</h5>
+                    <h5 style="font-size:12px">Wedding Cake</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-text">223 $</h5>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                </div>
              </div>
-            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card" style="height:100%">   
+              <img src="./product_img/wedding_cakes/wedd_2.jpg"" class="card-img-top"  alt="">
+              <div class="card-body">
+                  <h5 class="card-title">Wedding Cake</h5>
+                  <h5 style="font-size:12px">Wedding Cake</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-text">190 $</h5>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                <!-- </div> -->
+             </div>
+           </div>
+         </div>
+         <div class="col-sm-3">
+          <div class="card" style="height:100%">   
+            <img src="./product_img/wedding_cakes/wedd_3.jpg"" class="card-img-top"  alt="">
+            <div class="card-body">
+                <h5 class="card-title">Rustic Countryside</h5>
+                <h5 style="font-size:12px">Wedding Cake</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-text">190 $</h5>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              <!-- </div> -->
+           </div>
+         </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="card" style="height:100%">   
+          <img src="./product_img/wedding_cakes/wedd_4.jpg"" class="card-img-top"  alt="">
+          <div class="card-body">
+              <h5 class="card-title">Wedding Cake</h5>
+              <h5 style="font-size:12px">Wedding Cake</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-text">190 $</h5>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            <!-- </div> -->
+         </div>
+       </div>
+    </div>
+   </div>
+ </div>
+    
 
 
-        </div>
+      
 
 
 
