--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakery Home</title>
+    <link href="./index.css" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="center_text"> 
+        <img src="./product_img/Munamii_150.png" alt="Munamii">
+        <ul style="margin-left:-30px;margin-top:-10px">      
+            <li class="horizontal"><a href="./index.html">Home</a></li>
+            <li class="horizontal"><a href="./products.html">Products</a></li>
+            <li class="horizontal" ><a href="#about">About</a></li>
+            <li class="horizontal" ><a href="#contacts">Contacts</a></li>
+        </ul>
+      </div>
+    </header>
 </body>
 </html>
