Fixed different css-files for products.html and index.html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link href="./index.css" rel="stylesheet">
 </head>
 <body>
-    <header class="center_text"> 
+    <header class="center_text" style="background-color:white;height:220px"> 
         <img src="./product_img/Munamii_150.png" alt="Munamii">
-        <ul style="margin-left:-30px;margin-top:-10px">      
+        <ul class="hor_corr">      
             <li class="horizontal"><a href="./index.html">Home</a></li>
             <li class="horizontal"><a href="./products.html">Products</a></li>
             <li class="horizontal" ><a href="#about">About</a></li>
@@ -17,5 +17,8 @@
         </ul>
       </div>
     </header>
+    <footer>
+        <!-- ----------------- -->
+    </footer>
 </body>
 </html>
