--- a/products.html
+++ b/products.html
@@ -6,13 +6,25 @@
     <title>Our Cakse</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="./css/styles.css" rel="stylesheet">
+    <!-- <link href="./index.css" rel="stylesheet"> -->
+    <link href="./products.css" rel="stylesheet">
 </head>
 <body>
     
        <!-- header here -->
+       <header class="center_text" style="background-color:white;height:220px"> 
+        <img src="./product_img/Munamii_150.png" alt="Munamii">
+        <ul class="hor_corr">      
+            <li class="horizontal"><a href="./index.html">Home</a></li>
+            <li class="horizontal"><a href="./products.html">Products</a></li>
+            <li class="horizontal" ><a href="#about">About</a></li>
+            <li class="horizontal" ><a href="#contacts">Contacts</a></li>
+        </ul>
+      </div>
+      </header>
 
-      <div class="container"">
-        <h1 class="text-center">Our Cakes</h1>
+      <div class="container">
+        <h1 class="center_text" style="margin-top:30px">Our Cakes</h1>
       </div>
 
       <div class="container-fluid" style="margin-top:100px">
