--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakery Home</title>
+    <link href="./css/font-awesome.min.css" rel="stylesheet">
     <link href="./index.css" rel="stylesheet">
 </head>
 <body>
@@ -17,8 +18,24 @@
         </ul>
       </div>
     </header>
-    <footer>
-        <!-- ----------------- -->
+    <footer class="footer" style="height:200px;width:100%;background-color:lightgrey">
+        <aside>
+            <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p> -->
+            <ul>               
+                <li class="horizontal"><a href="#"><img src="./product_img/twitter_64.png" width="24px" height="24px"></img></a></li>
+                <li class="horizontal"><a href="#"><img src="./product_img/facebook_256.png" width="24px" height="24px"></img></a></li>
+                <li class="horizontal"><a href="#"><img src="./product_img/instagram_64.png" width="24px" height="24px"></img></a></li>                   
+            </ul>
+        </aside>
+          
+        <aside>
+            <ul class="list_style">
+                <li><a href="#">Your Account</a></li>
+                <li><a href="#">View Order</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms & Conditions</a></li>
+            </ul>
+        </aside>       
     </footer>
 </body>
 </html>
