Added contacts.html and about.html with the same basic layout as index.html

--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakery - About Us</title>
     <link href="./css/font-awesome.min.css" rel="stylesheet">
-    <link href="./about.css" rel="stylesheet">
+    <link href="./index.css" rel="stylesheet">
 </head>
 <body>
     <header class="center_text" style="background-color:white;height:220px"> 
@@ -18,7 +18,7 @@
         </ul>
       </div>
     </header>
-    <h1 class="center_text">About Us</h1>
+    <h1 class="center_text" style="color:darkgray">Contacts</h1>
     <footer  class="footer" style="height:200px;width:100%;background-color:lightgrey">    
         <aside>
             <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
