--- a/products.html
+++ b/products.html
@@ -17,8 +17,8 @@
         <ul class="hor_corr">      
             <li class="horizontal"><a href="./index.html">Home</a></li>
             <li class="horizontal"><a href="./products.html">Products</a></li>
-            <li class="horizontal" ><a href="#about">About</a></li>
-            <li class="horizontal" ><a href="#contacts">Contacts</a></li>
+            <li class="horizontal" ><a href="./about.html">About</a></li>
+            <li class="horizontal" ><a href="./contacts.html">Contacts</a></li>
         </ul>
       </div>
       </header>
@@ -142,7 +142,25 @@
  </div>
   
  <!-- footer here -->
-
+ <footer  style="height:200px;width:100%;background-color:lightgrey">
+  <aside>
+      <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
+      <ul>               
+          <li class="horizontal"><a href="#"><img src="./product_img/twitter_64.png" width="24px" height="24px"></img></a></li>
+          <li class="horizontal"><a href="#"><img src="./product_img/facebook_256.png" width="24px" height="24px"></img></a></li>
+          <li class="horizontal"><a href="#"><img src="./product_img/instagram_64.png" width="24px" height="24px"></img></a></li>                   
+      </ul>
+  </aside>
+    
+  <aside>
+      <ul class="list_style">
+          <li><a href="#">Your Account</a></li>
+          <li><a href="#">View Order</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms & Conditions</a></li>
+      </ul>
+  </aside>       
+</footer>
 
       
 
