--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
         <ul class="hor_corr">      
             <li class="horizontal"><a href="./index.html">Home</a></li>
             <li class="horizontal"><a href="./products.html">Products</a></li>
-            <li class="horizontal" ><a href="#about">About</a></li>
-            <li class="horizontal" ><a href="#contacts">Contacts</a></li>
+            <li class="horizontal" ><a href="./about.html">About</a></li>
+            <li class="horizontal" ><a href="./contacts.html">Contacts</a></li>
         </ul>
       </div>
     </header>
-    <footer class="footer" style="height:200px;width:100%;background-color:lightgrey">
+    <h1 class="center_text" style="color:lightgrey;">Welcome to Our Bakery</h1>
+    <footer  class="footer" style="height:200px;width:100%;background-color:lightgrey">    
         <aside>
-            <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p> -->
+            <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
             <ul>               
                 <li class="horizontal"><a href="#"><img src="./product_img/twitter_64.png" width="24px" height="24px"></img></a></li>
                 <li class="horizontal"><a href="#"><img src="./product_img/facebook_256.png" width="24px" height="24px"></img></a></li>
