Fixed headers nav-links centralization for products.html

--- a/contacts.html
+++ b/contacts.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakery - About Us</title>
     <link href="./css/font-awesome.min.css" rel="stylesheet">
-    <link href="./index.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="./css/styles.css" rel="stylesheet">
+    <link href="./contacts.css" rel="stylesheet">
 </head>
 <body>
-    <header class="center_text" style="background-color:white;height:220px"> 
+    <header class="center_text hor_corr" style="background-color:white;height:220px"> 
         <img src="./product_img/Munamii_150.png" alt="Munamii">
         <ul class="hor_corr">      
             <li class="horizontal"><a href="./index.html">Home</a></li>
@@ -38,5 +40,7 @@
             </ul>
         </aside>       
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
