--- a/contacts.html
+++ b/contacts.html
@@ -10,24 +10,28 @@
     <link href="./contacts.css" rel="stylesheet">
 </head>
 <body>
-    <header class="center_text hor_corr" style="background-color:white;height:220px"> 
-        <img src="./product_img/Munamii_150.png" alt="Munamii">
-        <ul class="hor_corr">      
+    <div class="container-fluid">
+       <header class="center_text" style="background-color:white;height:220px"> 
+         <img src="./product_img/Munamii_150.png" class="pic_corr" alt="Munamii">
+         <ul class="hor_corr">
             <li class="horizontal"><a href="./index.html">Home</a></li>
             <li class="horizontal"><a href="./products.html">Products</a></li>
             <li class="horizontal" ><a href="./about.html">About</a></li>
             <li class="horizontal" ><a href="./contacts.html">Contacts</a></li>
-        </ul>
-      </div>
-    </header>
-    <h1 class="center_text" style="color:darkgray">Contacts</h1>
-    <footer  class="footer" style="height:200px;width:100%;background-color:lightgrey">    
+         </ul>
+       </header>
+       <h1 class="center_text" style="color:darkgray">Contact</h1>
+    </div>
+
+    <!-- footer -->
+    <div id="wrapper">
+      <footer  class="footer" style="height:180px;width:100%;background-color:lightgrey">    
         <aside>
             <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
             <ul>               
-                <li class="horizontal"><a href="#"><img src="./product_img/twitter_64.png" width="24px" height="24px"></img></a></li>
-                <li class="horizontal"><a href="#"><img src="./product_img/facebook_256.png" width="24px" height="24px"></img></a></li>
-                <li class="horizontal"><a href="#"><img src="./product_img/instagram_64.png" width="24px" height="24px"></img></a></li>                   
+                <li class="horizontal"><a href="#"><img src="./product_img/social/twitter_64.png" width="24px" height="24px"></img></a></li>
+                <li class="horizontal"><a href="#"><img src="./product_img/social/facebook_256.png" width="24px" height="24px"></img></a></li>
+                <li class="horizontal"><a href="#"><img src="./product_img/social/instagram_64.png" width="24px" height="24px"></img></a></li>                   
             </ul>
         </aside>
           
@@ -39,7 +43,8 @@
                 <li><a href="#">Terms & Conditions</a></li>
             </ul>
         </aside>       
-    </footer>
+      </footer>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
