Added content for about.html

--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
       <section style="margin-bottom:100px">
       
       <div class="container">
-        <h1 class="center_text" style="margin-top:30px">Our Cakes</h1>
+        <h1 class="center_text" style="margin-top:30px;color:darkgrey">Our Cakes</h1>
       </div>
 
       <div class="container-fluid" style="margin-top:100px">
@@ -38,7 +38,7 @@
                   <h5 style="font-size:12px">Cupcake</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <h5 class="card-text">12 $</h5>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Add to cart</a>
                 <!-- </div>               -->
               </div>
              </div>
@@ -52,7 +52,7 @@
                    <h5 style="font-size:12px">Cupcake</h5>
                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                    <h5 class="card-text">12 $</h5>
-                   <a href="#" class="btn btn-primary">Go somewhere</a>
+                   <a href="#" class="btn btn-primary">Add to cart</a>
                 <!-- </div> -->
              </div>
            </div>
@@ -66,7 +66,7 @@
                    <h5 style="font-size:12px">Cupcake</h5>
                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                    <h5 class="card-text">10 $</h5>
-                   <a href="#" class="btn btn-primary">Go somewhere</a>
+                   <a href="#" class="btn btn-primary">Add to cart</a>
                 <!-- </div> -->
              </div>
            </div>
@@ -80,68 +80,69 @@
                   <h5 style="font-size:12px">Cupcake</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <h5 class="card-text">11 $</h5>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                <!-- </div> -->
+                  <a href="#" class="btn btn-primary">Add to cart</a>
              </div>
            </div>
           </div>
         </div>
-
+         <!-- row 2 -->
         <div class="row" style="margin-top:30px">
           <div class="col-sm-3">    <!-- class="col-md-3" -->
            <div class="card" style="height:100%">   <!--style="width: 15rem;" -->
-             <img src="./product_img/cupcakes/c-feature-1.jpg" class="card-img-top"  alt="">
+             <img src="./product_img/cupcakes/c-feature-5.jpg" class="card-img-top"  alt="">
              <div class="card-body">
              <!-- <div style="height:600px"> -->
-               <h5 class="card-title">Strawberry cupcake</h5>
+               <h5 class="card-title">Red Velvet</h5>
                <h5 style="font-size:12px">Cupcake</h5>
                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                <h5 class="card-text">12 $</h5>
-               <a href="#" class="btn btn-primary">Go somewhere</a>
+               <a href="#" class="btn btn-primary">Add to cart</a>
              </div>
            </div>
          </div>
          <div class="col-sm-3">    <!-- class="col-md-3" -->
           <div class="card" style="height:100%">   <!--style="width: 15rem;" -->
-            <img src="./product_img/cupcakes/c-feature-1.jpg" class="card-img-top"  alt="">
+            <img src="./product_img/cupcakes/c-feature-6.jpg" class="card-img-top"  alt="">
             <div class="card-body">
             <!-- <div style="height:600px"> -->
-              <h5 class="card-title">Strawberry cupcake</h5>
+              <h5 class="card-title">Vegan Strawberry</h5>
               <h5 style="font-size:12px">Cupcake</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <h5 class="card-text">12 $</h5>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Add to cart</a>
             </div>
           </div>
         </div>
         <div class="col-sm-3">    <!-- class="col-md-3" -->
           <div class="card" style="height:100%">   <!--style="width: 15rem;" -->
-            <img src="./product_img/cupcakes/c-feature-1.jpg" class="card-img-top"  alt="">
+            <img src="./product_img/cupcakes/c-feature-7.jpg" class="card-img-top"  alt="">
             <div class="card-body">
             <!-- <div style="height:600px"> -->
-              <h5 class="card-title">Strawberry cupcake</h5>
+              <h5 class="card-title">Cherry Vanilla Chocolate</h5>
               <h5 style="font-size:12px">Cupcake</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <h5 class="card-text">12 $</h5>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Add to cart</a>
             </div>
           </div>
         </div>
         <div class="col-sm-3">    <!-- class="col-md-3" -->
           <div class="card" style="height:100%">   <!--style="width: 15rem;" -->
-            <img src="./product_img/cupcakes/c-feature-1.jpg" class="card-img-top"  alt="">
+            <img src="./product_img/cupcakes/c-feature-8.jpg" class="card-img-top"  alt="">
             <div class="card-body">
             <!-- <div style="height:600px"> -->
-              <h5 class="card-title">Strawberry cupcake</h5>
+              <h5 class="card-title">Raspberry</h5>
               <h5 style="font-size:12px">Cupcake</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <h5 class="card-text">12 $</h5>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Add to cart</a>
             </div>
           </div>
         </div>
       </div>
+
          <!-- wedding cakes -->
+          <!-- this is row 3-->
         <div class="row" style="margin-top:30px">
             <div class="col-sm-3">
               <div class="card" style="height:100%">   
@@ -150,8 +151,8 @@
                     <h5 class="card-title">Mango Dream</h5>
                     <h5 style="font-size:12px">Wedding Cake</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <h5 class="card-text">223 $</h5>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-text">285 $</h5>
+                    <a href="#" class="btn btn-primary">Add to cart</a>
                </div>
              </div>
           </div>
@@ -159,11 +160,11 @@
             <div class="card" style="height:100%">   
               <img src="./product_img/wedding_cakes/wedd_2.jpg"" class="card-img-top"  alt="">
               <div class="card-body">
-                  <h5 class="card-title">Wedding Cake</h5>
+                  <h5 class="card-title">Coconut Delight</h5>
                   <h5 style="font-size:12px">Wedding Cake</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <h5 class="card-text">190 $</h5>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Add to chart</a>     <!-- max-width for long texts -->
                 <!-- </div> -->
              </div>
            </div>
@@ -176,7 +177,7 @@
                 <h5 style="font-size:12px">Wedding Cake</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <h5 class="card-text">190 $</h5>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Add to cart</a>
               <!-- </div> -->
            </div>
          </div>
@@ -185,65 +186,66 @@
         <div class="card" style="height:100%">   
           <img src="./product_img/wedding_cakes/wedd_4.jpg"" class="card-img-top"  alt="">
           <div class="card-body">
-              <h5 class="card-title">Wedding Cake</h5>
+              <h5 class="card-title">Flower Dream</h5>
               <h5 style="font-size:12px">Wedding Cake</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <h5 class="card-text">190 $</h5>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-text">310 $</h5>
+              <a href="#" class="btn btn-primary">Add to cart</a>
             <!-- </div> -->
          </div>
        </div>
     </div>
    </div>
+    <!-- row4 -->
     <div class="row" style="margin-top:30px">
      <div class="col-sm-3">
       <div class="card" style="height:100%">   
-        <img src="./product_img/wedding_cakes/wedd_3.jpg"" class="card-img-top"  alt="">
+        <img src="./product_img/wedding_cakes/wedd_5.png"" class="card-img-top"  alt="">
          <div class="card-body">
-            <h5 class="card-title">Rustic Countryside</h5>
+            <h5 class="card-title">Buttercream Classic</h5>
             <h5 style="font-size:12px">Wedding Cake</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <h5 class="card-text">190 $</h5>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-text">400 $</h5>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           <!-- </div> -->
         </div>
       </div>
      </div>
      <div class="col-sm-3">
       <div class="card" style="height:100%">   
-        <img src="./product_img/wedding_cakes/wedd_3.jpg"" class="card-img-top"  alt="">
+        <img src="./product_img/wedding_cakes/wedd_6.jpg"" class="card-img-top"  alt="">
         <div class="card-body">
-            <h5 class="card-title">Rustic Countryside</h5>
+            <h5 class="card-title">Lemon Custard</h5>
             <h5 style="font-size:12px">Wedding Cake</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <h5 class="card-text">190 $</h5>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-text">390 $</h5>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           <!-- </div> -->
        </div>
       </div>
     </div>
     <div class="col-sm-3">
       <div class="card" style="height:100%">   
-        <img src="./product_img/wedding_cakes/wedd_3.jpg"" class="card-img-top"  alt="">
+        <img src="./product_img/wedding_cakes/wedd_7.jpg"" class="card-img-top"  alt="">
         <div class="card-body">
-            <h5 class="card-title">Rustic Countryside</h5>
+            <h5 class="card-title">Buttercream and Strawberry</h5>
             <h5 style="font-size:12px">Wedding Cake</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <h5 class="card-text">190 $</h5>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-text">435 $</h5>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           <!-- </div> -->
        </div>
       </div>
     </div>
     <div class="col-sm-3">
       <div class="card" style="height:100%">   
-        <img src="./product_img/wedding_cakes/wedd_3.jpg"" class="card-img-top"  alt="">
+        <img src="./product_img/wedding_cakes/wedd_8.png" class="card-img-top"  alt="">
         <div class="card-body">
-            <h5 class="card-title">Rustic Countryside</h5>
+            <h5 class="card-title">Rustic Buttercream</h5>
             <h5 style="font-size:12px">Wedding Cake</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <h5 class="card-text">190 $</h5>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-text">410 $</h5>
+            <a href="#" class="btn btn-primary">Add to cart</a>
           <!-- </div> -->
        </div>
       </div>
@@ -253,7 +255,7 @@
 </section>
   
  <!-- footer here -->
- <footer  style="height:180px;width:100%;background-color:lightgrey">
+ <footer  style="height:220px;width:100%;background-color:lightgrey">
   <aside>
       <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
       <ul>               
