--- a/contacts.html
+++ b/contacts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakery - About Us</title>
-    <link href="./css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="./css/font-awesome.min.css" rel="stylesheet"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="./css/styles.css" rel="stylesheet">
     <link href="./contacts.css" rel="stylesheet">
@@ -25,7 +25,7 @@
 
     <!-- footer -->
     <div id="wrapper">
-      <footer  class="footer" style="height:180px;width:100%;background-color:lightgrey">    
+      <footer  class="footer" style="height:220px;width:100%;background-color:lightgrey">    
         <aside>
             <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
             <ul>               
