fixed the position of the logo

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <li class="horizontal" ><a href="./contacts.html">Contacts</a></li>
          </ul>
         </header>
-        <h1 class="center_text" style="color:darkgrey">About Us</h1>
+        <h1 class="center_text" style="margin-left:20px;color:darkgrey">About Us</h1>
         
         <div>   
         <!-- Banner -->
