--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
      </div>
    </div>
 
+   <h1 class="center_text" style="color:lightgrey;">Where quality meets tradition</h1>
 
     <div id="wrapper">
       <footer class="footer" style="height:220px;width:100%;background-color:lightgrey">    
