--- a/products.html
+++ b/products.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     
+      <div class="container-fluid">
        <!-- header here -->
        <header class="center_text"  style="background-color:white;height:220px"> 
-        <img src="./product_img/Munamii_150.png" class="pic_corr" style="margin-left:8px" alt="Munamii">
+        <img src="./product_img/Munamii_150.png" class="pic_corr" style="margin-left:0px" alt="Munamii">
         <ul class="hor_corr">      
             <li class="horizontal"><a href="./index.html">Home</a></li>
             <li class="horizontal"><a href="./products.html">Products</a></li>
@@ -20,6 +21,7 @@
             <li class="horizontal" ><a href="./contacts.html">Contacts</a></li>
         </ul>
       </header>
+      </div>
 
       <section style="margin-bottom:100px">
       
