fixed clickable logo,link goes to home page

--- a/contacts.html
+++ b/contacts.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container-fluid">
        <header class="center_text" style="background-color:white;height:220px"> 
-         <img src="./product_img/Munamii_150.png" class="pic_corr" alt="Munamii">
+         <a href="./index.html"><img src="./product_img/Munamii_150.png" class="pic_corr" alt="Munamii"></a>
          <ul class="hor_corr">
             <li class="horizontal"><a href="./index.html">Home</a></li>
             <li class="horizontal"><a href="./products.html">Products</a></li>
