--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakery - About Us</title>
-    <link href="./css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="./css/font-awesome.min.css" rel="stylesheet"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="./css/styles.css" rel="stylesheet">
     <link href="./about.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <div class="container-fluid">
        <header class="center_text" style="background-color:white;height:220px"> 
-         <img src="./product_img/Munamii_150.png"  class="pic_corr" alt="Munamii">
+         <a href="./index.html"><img src="./product_img/Munamii_150.png"  class="pic_corr" alt="Munamii"></a>
          <ul class="hor_corr">      
             <li class="horizontal"><a href="./index.html">Home</a></li>
             <li class="horizontal"><a href="./products.html">Products</a></li>
