--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakery Home</title>
-    <link href="./css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!-- <link href="./css/font-awesome.min.css" rel="stylesheet"> -->
+    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">  
     <link href="./css/styles.css" rel="stylesheet">
     <link href="./index.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 
   <div class="container-fluid">
     <header class="center_text" style="background-color:white;height:220px;"> 
-        <img src="./product_img/Munamii_150.png" class="pic_corr" alt="Munamii">
+        <a href="./index.html"><img src="./product_img/Munamii_150.png" class="pic_corr" alt="Munamii"></a>
         <ul class="hor_corr">      
             <li class="horizontal"><a href="./index.html">Home</a></li>
             <li class="horizontal"><a href="./products.html">Products</a></li>
@@ -59,9 +59,9 @@
         <aside>
             <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
             <ul>               
-                <li class="horizontal"><a href="#"><img src="./product_img/social/twitter_64.png" width="24px" height="24px"></img></a></li>
-                <li class="horizontal"><a href="#"><img src="./product_img/social/facebook_256.png" width="24px" height="24px"></img></a></li>
-                <li class="horizontal"><a href="#"><img src="./product_img/social/instagram_64.png" width="24px" height="24px"></img></a></li>                   
+                <li class="horizontal"><a href="https://www.twitter.com"><img src="./product_img/social/twitter_64.png" width="24px" height="24px"></img></a></li>
+                <li class="horizontal"><a href="https://www.facebook.com"><img src="./product_img/social/facebook_256.png" width="24px" height="24px"></img></a></li>
+                <li class="horizontal"><a href="https://www.instagram.com"><img src="./product_img/social/instagram_64.png" width="24px" height="24px"></img></a></li>                   
             </ul>
         </aside>
           
