--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
       <div class="container-fluid">
        <!-- header here -->
        <header class="center_text"  style="background-color:white;height:220px"> 
-        <img src="./product_img/Munamii_150.png" class="pic_corr" style="margin-left:0px" alt="Munamii">
+        <a href="./index.html"><img src="./product_img/Munamii_150.png" class="pic_corr" style="margin-left:0px" alt="Munamii"></a>
         <ul class="hor_corr">      
             <li class="horizontal"><a href="./index.html">Home</a></li>
             <li class="horizontal"><a href="./products.html">Products</a></li>
