Added new text to philosophy on about-page and changed contacts to contact in nav.

--- a/contacts.html
+++ b/contacts.html
@@ -17,12 +17,18 @@
             <li class="horizontal"><a href="./index.html">Home</a></li>
             <li class="horizontal"><a href="./products.html">Products</a></li>
             <li class="horizontal" ><a href="./about.html">About</a></li>
-            <li class="horizontal" ><a href="./contacts.html">Contacts</a></li>
+            <li class="horizontal" ><a href="./contacts.html">Contact</a></li>
          </ul>
        </header>
        <h1 class="center_text" style="color:darkgray">Contact</h1>
+       <div>   
+        <div class="cont" style="margin-bottom:100px;">
+           <img  src="./product_img/banner-bg.jpg" style="height:302px;width:100%"></img>
+           <!-- <div class="centered" style="color:lightgrey;font-size:25pt;font-weight:bold;">Welcome to Our Bakery</div> -->
+        </div>
+     </div>
     </div>
-
+    
     <!-- footer -->
     <div id="wrapper">
       <footer  class="footer" style="height:220px;width:100%;background-color:lightgrey">    
