--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li class="horizontal"><a href="./index.html">Home</a></li>
             <li class="horizontal"><a href="./products.html">Products</a></li>
             <li class="horizontal" ><a href="./about.html">About</a></li>
-            <li class="horizontal" ><a href="./contacts.html">Contacts</a></li>
+            <li class="horizontal" ><a href="./contacts.html">Contact</a></li>
         </ul>
     </header>
 
