--- a/about.html
+++ b/about.html
@@ -17,13 +17,12 @@
             <li class="horizontal"><a href="./index.html">Home</a></li>
             <li class="horizontal"><a href="./products.html">Products</a></li>
             <li class="horizontal" ><a href="./about.html">About</a></li>
-            <li class="horizontal" ><a href="./contacts.html">Contacts</a></li>
+            <li class="horizontal" ><a href="./contacts.html">Contact</a></li>
          </ul>
         </header>
         <h1 class="center_text" style="margin-left:20px;color:darkgrey">About Us</h1>
         
         <div>   
-        <!-- Banner -->
           <div class="cont" style="margin-bottom:100px;">
              <img  src="./product_img/banner-bg.jpg" style="height:302px;width:100%"></img>
              <!-- <div class="centered" style="color:lightgrey;font-size:25pt;font-weight:bold;">Welcome to Our Bakery</div> -->
@@ -31,10 +30,15 @@
        </div>
 
        <h2 class="center_text" style="color:darkgray">Our philosophy</h2>
-       <div class="feature" style="width:50%;">  
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+       <div class="feature" style="width:50%;padding:15px 15px">  
+        <!-- <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur
+        </p> -->
+        <p>
+          At Munamii Cakery,&nbsp;each cake,&nbsp;each box of cupcakes that we make has a very special value for us.&nbsp;We not only want to bring a desert to your table but rather a unique experience for you,
+          which will become an unforgettable memory.We have been in the pastry market for more than 8 years and now we offer you a new way to shop through our web site.
         </p>
+
      </div>
 
 
