Changed footer to 180px height and a margin-toppadding of 15 px inside that

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link href="./about.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin-bottom:-150px">
        <header class="center_text" style="background-color:white;height:220px"> 
          <a href="./index.html"><img src="./product_img/Munamii_150.png"  class="pic_corr" alt="Munamii"></a>
          <ul class="hor_corr">      
@@ -30,7 +30,7 @@
        </div>
 
        <h2 class="center_text" style="color:darkgray">Our philosophy</h2>
-       <div class="feature" style="width:50%;padding:15px 15px">  
+       <div class="feature" style="width:50%;padding:18px 18px">  
         <!-- <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur
         </p> -->
@@ -39,7 +39,7 @@
           which will become an unforgettable memory.We have been in the pastry market for more than 8 years and now we offer you a new way to shop through our web site.
         </p>
 
-     </div>
+       </div>
 
 
     </div>
@@ -50,8 +50,8 @@
 
     <!-- footer -->
     <div id="wrapper">
-      <footer class="footer"  style="height:220px;width:100%;background-color:lightgrey">    
-        <aside>
+      <footer class="footer"  style="height:180px;width:100%;background-color:lightgrey">    
+        <aside style="margin-top:15px">
             <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
             <ul>               
                 <li class="horizontal"><a href="#"><img src="./product_img/social/twitter_64.png" width="24px" height="24px"></img></a></li>
