--- a/contacts.html
+++ b/contacts.html
@@ -31,10 +31,10 @@
     
     <!-- footer -->
     <div id="wrapper">
-      <footer  class="footer" style="height:220px;width:100%;background-color:lightgrey">    
+      <footer  class="footer" style="height:180px;width:100%;background-color:lightgrey">    
         <aside>
             <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
-            <ul>               
+            <ul style="margin-top:15px">               
                 <li class="horizontal"><a href="#"><img src="./product_img/social/twitter_64.png" width="24px" height="24px"></img></a></li>
                 <li class="horizontal"><a href="#"><img src="./product_img/social/facebook_256.png" width="24px" height="24px"></img></a></li>
                 <li class="horizontal"><a href="#"><img src="./product_img/social/instagram_64.png" width="24px" height="24px"></img></a></li>                   
