--- a/products.html
+++ b/products.html
@@ -257,8 +257,8 @@
 </section>
   
  <!-- footer here -->
- <footer  style="height:220px;width:100%;background-color:lightgrey">
-  <aside>
+ <footer  style="height:180px;width:100%;background-color:lightgrey">
+  <aside style="padding-top:15px">
       <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
       <ul>               
           <li class="horizontal"><a href="#"><img src="./product_img/social/twitter_64.png" width="24px" height="24px"></img></a></li>
