--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
    <h1 class="center_text" style="color:lightgrey;">Where quality meets tradition</h1>
 
     <div id="wrapper">
-      <footer class="footer" style="height:220px;width:100%;background-color:lightgrey">    
-        <aside>
+      <footer class="footer" style="height:180px;width:100%;background-color:lightgrey">    
+        <aside style="margin-top:15px">
             <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
             <ul>               
                 <li class="horizontal"><a href="https://www.twitter.com"><img src="./product_img/social/twitter_64.png" width="24px" height="24px"></img></a></li>
