Home page: fixed media queries for devices up to 999 pix but not over

--- a/index.html
+++ b/index.html
@@ -52,12 +52,17 @@
      </div>
    </div>
 
-   <h1 class="center_text" style="color:lightgrey;">Where quality meets tradition</h1>
+   <h2 class="center_text" style="color:lightgrey;margin-top:70px">Where quality meets tradition</h2>
+   <div class="feature_home" style="margin-top:-10px">
+    <p>
+      Hi! Welcome to Munamii Cakery ! We offer you the most delicious cakes and cupcakes for all kinds of events and celebrations.Browse around to discover what you would like to buy.
+    </p>
+   </div>
+
 
     <div id="wrapper">
       <footer class="footer" style="height:180px;width:100%;background-color:lightgrey">    
         <aside style="margin-top:15px">
-            <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>  -->
             <ul>               
                 <li class="horizontal"><a href="https://www.twitter.com"><img src="./product_img/social/twitter_64.png" width="24px" height="24px"></img></a></li>
                 <li class="horizontal"><a href="https://www.facebook.com"><img src="./product_img/social/facebook_256.png" width="24px" height="24px"></img></a></li>
