--- a/about.html
+++ b/about.html
@@ -30,10 +30,7 @@
        </div>
 
        <h2 class="center_text" style="color:darkgray">Our philosophy</h2>
-       <div class="feature" style="width:50%;padding:18px 18px">  
-        <!-- <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur
-        </p> -->
+       <div class="feature_about" style="width:50%;padding:18px 18px">  
         <p>
           At Munamii Cakery,&nbsp;each cake,&nbsp;each box of cupcakes that we make has a very special value for us.&nbsp;We not only want to bring a desert to your table but rather a unique experience for you,
           which will become an unforgettable memory.We have been in the pastry market for more than 8 years and now we offer you a new way to shop through our web site.
