--- a/contacts.html
+++ b/contacts.html
@@ -27,7 +27,41 @@
            <!-- <div class="centered" style="color:lightgrey;font-size:25pt;font-weight:bold;">Welcome to Our Bakery</div> -->
         </div>
      </div>
-    </div>
+     
+     <h2 class="center_text" style="color:darkgray">Address</h2>
+     <div class="container">
+        <div class="feature_adress" style="width:50%;padding:18px 18px;word-wrap:break-word">  
+        <p>
+          <strong>Address:</strong>&nbsp;&nbsp;Via La Costa Avenue 79000 Tinzeltown</br>
+         </br>
+          <strong>Phone:</strong>&nbsp;&nbsp;+49999 &nbsp;1111111</br>
+         </br>
+          <strong>Email:</strong>&nbsp;&nbsp;example@email.com</br>
+          <br>
+          <strong>Opening Hours:</strong>&nbsp;&nbsp;Mon - Fri:&nbsp;9 a.m - 6 p.m <br>
+          <span>Sat:&nbsp10 a.m - 2 p.m</span></br>
+        </p>
+       </div>
+     </div>
+
+
+     <h2 class="center_text" style="color:darkgray;margin-top:100px;word-wrap:break-word">Deliveries</h2>
+     <div class="feature_contact" style="width:50%;padding:18px 18px">  
+      <p>
+        <strong>Home delivery service:</strong>&nbsp;&nbsp;All the City of Stockholm and all of Malmö with additional cost.</br>
+      </br>
+        <strong>Place to pick up order:</strong>&nbsp;&nbsp;Via La Costa Avenue.&nbsp;Blue port gated <span>neighbourhood</span>.We will send you the GPS Location via WhatsApp.</br>
+      </br>
+        Orders must be placed 2 days before for greater security, processing and availability.
+        <br>
+        <br>
+        Tuesday to Saturday<br>
+        9 a.m to 2 p.m
+      </p>
+     </div>
+
+
+  </div>
     
     <!-- footer -->
     <div id="wrapper">
