--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
  
-    <h1 class="center_text" style="color:lightgrey;">Welcome to Our Bakery</h1>
+    <h1 class="center_text" style="color:darkgrey;margin-bottom:40px;">Welcome to Our Bakery</h1>
     <!-- <div>  Banner -->
         <!-- <div class="cont" style="margin-bottom:100px;"> -->
            <!-- <img  src="./product_img/banner-bg.jpg" style="height:302px;width:100%"></img> -->
@@ -52,9 +52,9 @@
      </div>
    </div>
 
-   <h2 class="center_text" style="color:lightgrey;margin-top:70px">Where quality meets tradition</h2>
+   <h2 class="center_text" style="color:darkgrey;margin-top:80px">Where quality meets tradition</h2>
    <div class="feature_home" style="margin-top:-10px">
-    <p>
+    <p style="color:black;">
       Hi! Welcome to Munamii Cakery ! We offer you the most delicious cakes and cupcakes for all kinds of events and celebrations.Browse around to discover what you would like to buy.
     </p>
    </div>
