Fixed background-images,banners for about.html and contacts.html

--- a/about.html
+++ b/about.html
@@ -22,14 +22,16 @@
         </header>
         <h1 class="center_text" style="margin-left:20px;color:darkgrey">About Us</h1>
         
-        <div>   
-          <div class="cont" style="margin-bottom:100px;">
-             <img  src="./product_img/banner-bg.jpg" style="height:302px;width:100%"></img>
+        <section class="banner_area">
+          <div class="container" style="padding-bottom:240px;margin-bottom:100px;">  <!--use background-image for container -->
+             <!-- <img  src="./product_img/banner-bg.jpg" style="height:302px;width:100%"></img> -->
+             <!-- <img class="theBanner" src="./product_img/banner-bg.jpg"></img> -->
+             
              <!-- <div class="centered" style="color:lightgrey;font-size:25pt;font-weight:bold;">Welcome to Our Bakery</div> -->
           </div>
-       </div>
+        </section>
 
-       <h2 class="center_text" style="color:darkgray">Our philosophy</h2>
+       <h2 class="center_text" style="margin-bottom:40px;color:darkgray">Our philosophy</h2>
        <div class="feature_about" style="width:50%;padding:18px 18px">  
         <p>
           At Munamii Cakery,&nbsp;each cake,&nbsp;each box of cupcakes that we make has a very special value for us.&nbsp;We not only want to bring a desert to your table but rather a unique experience for you,
