--- a/contacts.html
+++ b/contacts.html
@@ -19,14 +19,16 @@
             <li class="horizontal" ><a href="./about.html">About</a></li>
             <li class="horizontal" ><a href="./contacts.html">Contact</a></li>
          </ul>
-       </header>
+       </header>   
        <h1 class="center_text" style="color:darkgray">Contact</h1>
-       <div>   
-        <div class="cont" style="margin-bottom:100px;">
-           <img  src="./product_img/banner-bg.jpg" style="height:302px;width:100%"></img>
+
+       <section class="theBanner">
+        <div class="container" style="padding-bottom:240px;margin-bottom:100px;">
+           <!-- <img  src="./product_img/banner-bg.jpg" style="max-width:100%;height:auto;width:100%"></img> -->
+           <!-- <img  class="theBanner" src="./product_img/banner-bg.jpg"></img> -->
            <!-- <div class="centered" style="color:lightgrey;font-size:25pt;font-weight:bold;">Welcome to Our Bakery</div> -->
         </div>
-     </div>
+      </section>
      
      <h2 class="center_text" style="color:darkgray">Address</h2>
      <div class="container">
